0030348: Shape Healing - ShapeFix_Wire::FixEdgeCurves() throws Standard_OutOfRange exception

Call FixClosed() instead of out-of-range FixConnected() at the last edge.